fixed overlay showing at small viewport height when supposed to be hidden by reconfiguring css top and translation properties

--- a/src/drop-down-menu.css
+++ b/src/drop-down-menu.css
@@ -57,33 +57,28 @@
 
 .drop-down-menu>.menu-overlay {
     position: absolute;
-    top: 0px;
     left: 0px;
+    bottom: 100vh;
+    z-index: 1;
 
     height: 100vh;
     width: 100vw;
 
-    background-color: white;
-
-    translate: 0px -100vh;
-    transition: translate 300ms ease-in-out;
-}
-
-.drop-down-menu>.menu-overlay {
-    position: absolute;
-    top: 0px;
-    z-index: 1;
-
     display: flex;
     gap: 20px;
 
+    translate: 0px 0px;
+    transition: translate 300ms ease-in-out;
+
     background-color: white;
+
+    overflow: hidden;
 }
 
 .drop-down-menu>.menu-overlay.active {
     visibility: visible;
 
-    translate: 0px 0px;
+    translate: 0px 100vh;
     transition: translate 300ms ease-in-out;
 }
 
@@ -137,8 +132,6 @@
 
     gap: 20px;
     padding: 30px 0px 0px 30px;
-
-    abackground-color: orange;
 }
 
 .drop-down-menu>.menu-overlay>.sections-container>.section-backdrop {
